<?xml version="1.0"?>
<package format="2">
  <name>roborts_slam</name>
  <version>0.0.0</version>
  <description>The ceres_test package</description>

  <maintainer email="fengyu.su@todo.todo">kevinlad</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
